Still Styling, fixed some text errors and alignment issues, added animations to submit button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,10 +59,16 @@ blockquote, q {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(https://images.pexels.com/photos/60893/tunnel-underground-underpass-lighting-60893.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background: linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75) ), url(https://images.pexels.com/photos/60893/tunnel-underground-underpass-lighting-60893.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.header {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .welcome {
@@ -109,6 +115,10 @@ blockquote, q {
   font-size: 4em;
 }
 
+.tagline {
+  color: whitesmoke;
+}
+
 /* Create New Guest Form */
 .create-new-guest-form {
   text-align: center;
@@ -119,62 +129,94 @@ blockquote, q {
 }
 
 .input-field {
-  margin: 25px 25px 25px 0;
+  margin-bottom: 15px;
+  width: 100%;
   color: rgba(255, 255, 255, 0.781);
   background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 2.5px;
+  border-color: rgba(255, 255, 255, 0);
+}
+
+.input-field:focus, .textarea-field:focus {
+  border-color: rgba(255, 255, 255, 0.5);
 }
 
 .textarea-field {
+  margin-bottom: 15px;
   width: 100%;
-  /* height:  */
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 0.781);
+  border-radius: 2.5px;
+  border-color: rgba(255, 255, 255, 0);
+  resize: none;
 }
 
 #new-guest-form {
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  width: 200px; */
+  justify-content: center;
+  align-items: center;
+  width: 500px;
 }
 
+.button {
+  font-weight: 900;
+  color: rgb(200, 200, 200);
+  background-color: #000;
+  border: 1px solid #cacaca;
+  border-radius: 1px;
+  padding: 5px 20px;
+  transition: color .5s;
+}
+
+.button:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(200, 200, 200);
+}
 
 /* Entries */
 .entry {
   display: flex;
   justify-content: space-evenly;
-  border:1px solid black;
   width: 100%;
   height: 150px;
 }
 
 .name {
-  border: 2px solid red;
+  border: .5px solid rgba(255, 255, 255, 0.6);
+  border-left: black;
   width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .name a {
   text-decoration: none;
-  color: black;
 }
 
 .name a h2 {
-  text-decoration: none;
-  color: black;
+  color: rgb(223, 223, 223);
   font-family: "Permanent Marker", Verdana, sans-serif;
   font-size: 2.5em;
 }
 
 .message {
-  border: 2px solid blueviolet;
+  border: .5px solid rgba(255, 255, 255, 0.6);
+  border-right: black;
   width: 60%;
   padding: 30px 20px;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+  background-color: black;
+  overflow: auto;
+  overflow-wrap: break-word;
 }
 
 .message p {
   font-family: Roboto, sans-serif;
+  color: rgb(223, 223, 223);
 }
